fix: tests now need to login after register to get tokens